user info event published

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,12 @@ logging.level.root=warn
 server.port=5001
 management.endpoints.web.exposure.include=*
 
+
 spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.topic.name=my-topic
-spring.kafka.producer.value.serializer="com.example.AuthService.serializer.UserInfoSerializer"
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= com.example.AuthService.serializer.UserInfoSerializer
+spring.kafka.topic-json.name=my-topic
+spring.kafka.producer.properties.spring.json.type.mapping=auth:authservice.eventProducer.UserInfoEvent
 
 
 
